Some bugfixes and a new convenience method in EDHeaderBearingObjects. (This commit does not result a new release. Consider it a snapshot.)

--- a/DataStructures.subproj/Makefile
+++ b/DataStructures.subproj/Makefile
@@ -31,7 +31,7 @@ OTHERSRCS = Makefile.preamble Makefile Makefile.postamble
 MAKEFILEDIR = $(MAKEFILEPATH)/pb_makefiles
 CODE_GEN_STYLE = DYNAMIC
 MAKEFILE = subproj.make
-NEXTSTEP_INSTALLDIR = /Local/Library/Frameworks
+NEXTSTEP_INSTALLDIR = $(LOCAL_LIBRARY_DIR)/Frameworks
 LIBS = 
 DEBUG_LIBS = $(LIBS)
 PROF_LIBS = $(LIBS)
