Some fixes for building under Solaris, moved include for parent makefile preamble to top of makefile preamble. Fixed bug that caused filenames to be omitted in content-type headers when content type was "application/octet-stream." (This commit does not result a new release. Consider it a snapshot.)

--- a/Makefile.postamble
+++ b/Makefile.postamble
@@ -100,11 +100,19 @@ WARNING_CFLAGS = -Wall
 # derived files should go.
 #
 
+# Add awk for solaris
+ifeq "$(PLATFORM_OS)" "solaris"
+ifeq "$(AWK)" ""
+AWK = /usr/bin/nawk
+endif
+endif
+
+
 # Include some additional definitions from parent project (if possible)
 -include ../Makefiles/common.make.postamble
 
 
-
+# Rules fix/precompile installed headers
 fix-headers:
 ifeq "$(BUILD_WO_VERSION)" "YES"
 	$(SILENT) ( \
