NSProcessInfo+Extensions.[hm] was there, but not added to the FoundationExtensions.subproj. Did this and made NSProcessInfo+Extensions.h a public header.

--- a/FoundationExtensions.subproj/Makefile
+++ b/FoundationExtensions.subproj/Makefile
@@ -41,7 +41,8 @@ PUBLIC_HEADERS = NSArray+Extensions.h NSDate+Extensions.h\
                  NSObject+Extensions.h NSScanner+Extensions.h\
                  NSString+Extensions.h CollectionMapping.h\
                  NSDictionary+Extensions.h\
-                 NSAttributedString+Extensions.h NSData+Extensions.h
+                 NSAttributedString+Extensions.h NSData+Extensions.h\
+                 NSProcessInfo+Extensions.h
 
 PROJECT_HEADERS = CollectionMapping.h NSString+Extensions.h\
                   NSAttributedString+Extensions.h
