--- a/AppKitExtensions.subproj/Makefile
+++ b/AppKitExtensions.subproj/Makefile
@@ -18,12 +18,12 @@ CLASSES = NSApplication+Extensions.m\
           NSAttributedString+AppKitExtensions.m NSMatrix+Extensions.m\
           NSPasteboard+Extensions.m NSTableView+Extensions.m\
           NSTableColumn+Extensions.m NSWindow+Extensions.m\
-          EDApplication.m
+          NSWorkspace+Extensions.m EDApplication.m
 
 HFILES = NSApplication+Extensions.h NSAttributedString+AppKitExtensions.h\
          NSMatrix+Extensions.h NSPasteboard+Extensions.h\
          NSTableView+Extensions.h NSTableColumn+Extensions.h\
-         NSWindow+Extensions.h EDApplication.h
+         NSWindow+Extensions.h NSWorkspace+Extensions.h EDApplication.h
 
 OTHERSRCS = Makefile.preamble Makefile Makefile.postamble
 
@@ -40,7 +40,7 @@ PUBLIC_HEADERS = EDApplication.h NSPasteboard+Extensions.h\
                  NSWindow+Extensions.h NSApplication+Extensions.h\
                  NSTableColumn+Extensions.h NSTableView+Extensions.h\
                  NSAttributedString+AppKitExtensions.h\
-                 NSMatrix+Extensions.h
+                 NSMatrix+Extensions.h NSWorkspace+Extensions.h
 
 
 
