Some extensions to conveniently create new sets coprising objects from an existing immutable set and another set or array.

--- a/FoundationExtensions.subproj/Makefile
+++ b/FoundationExtensions.subproj/Makefile
@@ -15,14 +15,16 @@ PROJECT_TYPE = Component
 CLASSES = NSArray+Extensions.m NSAttributedString+Extensions.m\
           NSData+Extensions.m NSDate+Extensions.m\
           NSDictionary+Extensions.m NSObject+Extensions.m\
-          NSProcessInfo+Extensions.m NSScanner+Extensions.m\
-          NSString+Extensions.m CollectionMapping.m
+          NSProcessInfo+Extensions.m NSSet+Extensions.m\
+          NSScanner+Extensions.m NSString+Extensions.m\
+          CollectionMapping.m
 
 HFILES = NSArray+Extensions.h NSAttributedString+Extensions.h\
          NSData+Extensions.h NSDate+Extensions.h\
          NSDictionary+Extensions.h NSObject+Extensions.h\
-         NSProcessInfo+Extensions.h NSScanner+Extensions.h\
-         NSString+Extensions.h CollectionMapping.h
+         NSProcessInfo+Extensions.h NSSet+Extensions.h\
+         NSScanner+Extensions.h NSString+Extensions.h\
+         CollectionMapping.h
 
 OTHERSRCS = Makefile.preamble Makefile Makefile.postamble
 
@@ -42,10 +44,10 @@ PUBLIC_HEADERS = NSArray+Extensions.h NSDate+Extensions.h\
                  NSString+Extensions.h CollectionMapping.h\
                  NSDictionary+Extensions.h\
                  NSAttributedString+Extensions.h NSData+Extensions.h\
-                 NSProcessInfo+Extensions.h
+                 NSProcessInfo+Extensions.h NSSet+Extensions.h
 
 PROJECT_HEADERS = CollectionMapping.h NSString+Extensions.h\
-                  NSAttributedString+Extensions.h
+                  NSAttributedString+Extensions.h NSSet+Extensions.h
 
 
 
