Port to Mac OS X final. Tool subproject to compose mail is not needed anymore because openURL: can handle mailto: URLs now.

--- a/PB.project
+++ b/PB.project
@@ -16,8 +16,7 @@
             FoundationExtensions.subproj, 
             DataStructures.subproj, 
             AppKitExtensions.subproj, 
-            Widgets.subproj, 
-            mvcompose.tproj
+            Widgets.subproj
         ); 
     }; 
     LANGUAGE = English; 
