--- a/Makefile.postamble
+++ b/Makefile.postamble
@@ -65,6 +65,7 @@
 #    DEBUG_BUILD_LDFLAGS, OPTIMIZE_BUILD_LDFLAGS, PROFILE_BUILD_LDFLAGS: flags
 #	passed to ld/libtool (defaults to nothing)
 WARNING_CFLAGS = -Wall
+OPTIMIZE_BUILD_CFLAGS = -O2 -DOPTIMIZED
 
 
 # Library and Framework projects only:
