--- a/FoundationExtensions.subproj/PB.project
+++ b/FoundationExtensions.subproj/PB.project
@@ -7,6 +7,7 @@
             "NSData+Extensions.m", 
             "NSDate+Extensions.m", 
             "NSDictionary+Extensions.m", 
+            "NSInvocation+Extensions.m", 
             "NSObject+Extensions.m", 
             "NSProcessInfo+Extensions.m", 
             "NSSet+Extensions.m", 
@@ -21,6 +22,7 @@
             "NSData+Extensions.h", 
             "NSDate+Extensions.h", 
             "NSDictionary+Extensions.h", 
+            "NSInvocation+Extensions.h", 
             "NSObject+Extensions.h", 
             "NSProcessInfo+Extensions.h", 
             "NSSet+Extensions.h", 
