Fixes for the (old) Mac OS X Server build. Note that defining EDCOMMON_OSXSBUILD is not required anymore. (This now doesn't build under Public Beta but how cares, it's expired anyway...)

--- a/AppKitExtensions.subproj/Makefile
+++ b/AppKitExtensions.subproj/Makefile
@@ -41,7 +41,8 @@ PUBLIC_HEADERS = EDApplication.h NSPasteboard+Extensions.h\
                  NSWindow+Extensions.h NSApplication+Extensions.h\
                  NSTableColumn+Extensions.h NSTableView+Extensions.h\
                  NSAttributedString+AppKitExtensions.h\
-                 NSMatrix+Extensions.h NSWorkspace+Extensions.h
+                 NSMatrix+Extensions.h NSWorkspace+Extensions.h\
+                 EDToolbarDefinition.h
 
 
 
