--- a/AppKitExtensions.subproj/PB.project
+++ b/AppKitExtensions.subproj/PB.project
@@ -39,7 +39,8 @@
             "NSTableView+Extensions.h", 
             "NSAttributedString+AppKitExtensions.h", 
             "NSMatrix+Extensions.h", 
-            "NSWorkspace+Extensions.h"
+            "NSWorkspace+Extensions.h", 
+            EDToolbarDefinition.h
         ); 
         SUBPROJECTS = (); 
     }; 
