Added new window subclass that implements keyboard shortcuts. (A dictionary maps keys or sequences of keys to selectors that are sent down the responder chain. Format of the dictionary should be self explanatory; much like the one used by Project Builder.)

--- a/AppKitExtensions.subproj/PB.project
+++ b/AppKitExtensions.subproj/PB.project
@@ -12,6 +12,7 @@
             "NSWindow+Extensions.m", 
             "NSWorkspace+Extensions.m", 
             EDApplication.m, 
+            EDKeyControlWindow.m, 
             EDToolbarDefinition.m
         ); 
         H_FILES = (
@@ -24,6 +25,7 @@
             "NSWindow+Extensions.h", 
             "NSWorkspace+Extensions.h", 
             EDApplication.h, 
+            EDKeyControlWindow.h, 
             EDToolbarDefinition.h
         ); 
         IMAGES = (arrows.tiff); 
