Ported EDCommon to GNUstep. Test with gnustep-base only (libFoundation will probably not work).

--- a/AppKitExtensions.subproj/PB.project
+++ b/AppKitExtensions.subproj/PB.project
@@ -42,7 +42,8 @@
             "NSAttributedString+AppKitExtensions.h", 
             "NSMatrix+Extensions.h", 
             "NSWorkspace+Extensions.h", 
-            EDToolbarDefinition.h
+            EDToolbarDefinition.h, 
+            EDKeyControlWindow.h
         ); 
         SUBPROJECTS = (); 
     }; 
