--- a/AppKitExtensions.subproj/Makefile
+++ b/AppKitExtensions.subproj/Makefile
@@ -43,7 +43,7 @@ PUBLIC_HEADERS = EDApplication.h NSPasteboard+Extensions.h\
                  NSTableColumn+Extensions.h NSTableView+Extensions.h\
                  NSAttributedString+AppKitExtensions.h\
                  NSMatrix+Extensions.h NSWorkspace+Extensions.h\
-                 EDToolbarDefinition.h
+                 EDToolbarDefinition.h EDKeyControlWindow.h
 
 
 
