--- a/Makefile.postamble
+++ b/Makefile.postamble
@@ -120,10 +120,10 @@ ifneq "$(OS)" "MACOS"
 		for ph in $(PUBLIC_HEADERS); \
 		do \
 			h_path=$(DSTROOT)$(PUBLIC_HDR_INSTALLDIR)$(PUBLIC_HEADER_DIR_SUFFIX)/$$ph; \
-			$(AWK) '/#ifndef.*EDCOMMON_OSXSBUILD/, /#endif.*EDCOMMON_OSXSBUILD/ { next; } { print $0; }' $$h_path >> $$h_path.fixed; \
+			$(AWK) '/#ifdef.*EDCOMMON_OSXBUILD/, /#endif.*EDCOMMON_OSXBUILD/ { next; } { print $0; }' $$h_path >> $$h_path.fixed; \
 			$(MV) $$h_path.fixed $$h_path; \
 		done ; \
-		$(ECHO) "Fixed for WO build $(PUBLIC_HEADERS)"; \
+		$(ECHO) "Fixed for non-OSX build $(PUBLIC_HEADERS)"; \
 		)
 endif
 ifeq "$(BUILD_WO_VERSION)" "YES"
@@ -140,7 +140,6 @@ endif
 
 
 precompile-headers:
-ifeq "$(OS)" "NEXTSTEP"
 	$(SILENT) ( \
 	  $(ECHO) "Precompiling public headers... (non-apple extension)" ; \
 	  for pph in $(PUBLIC_PRECOMPILED_HEADERS) ; \
@@ -151,4 +150,3 @@ ifeq "$(OS)" "NEXTSTEP"
 	    $(CC) -precomp $(PUBLIC_PRECOMPILED_HEADERS_CFLAGS) $(DEBUG_BUILD_CFLAGS) -o $$p_path $$h_path ; \
 	  done ; \
 	  )
-endif
