Fixes submitted by Craig Scratchley <craig.scratchley@marketocracy.com>: - Additions to build on newer PDO (Solaris) version (presumably WebObjects 4.5.x) - link against EOControl.framework on Rhapsody
I also revamped the Makefile driven build-process a bit. Precompiling should work now, even in the case that your target directory is write protected after install. it is now possible to place a Makefile.preamble.local and Makefile.postamble.local in your build directory. You can override all settings you deem necessary in these files. Also, precompilation flags are handled a bit differently now. It's now possible to NOT set -DDEBUG for precompiled headers during debug builds - that eases some annoyances this may have caused in the (not so late) past on OS X.

--- a/Makefile.postamble
+++ b/Makefile.postamble
@@ -102,7 +102,7 @@ OPTIMIZE_BUILD_CFLAGS = -O2 -DOPTIMIZED
 #
 
 # Add awk for solaris
-ifeq "$(PLATFORM_OS)" "solaris"
+ifeq "$(OS)" "SOLARIS"
 ifeq "$(AWK)" ""
 AWK = /usr/bin/nawk
 endif
@@ -111,6 +111,8 @@ endif
 
 # Include some additional definitions from parent project (if possible)
 -include ../Makefiles/common.make.postamble
+# Include YOUR custom definitions (if you did provide such)
+-include Makefile.postamble.local
 
 
 # Rules fix/precompile installed headers
@@ -142,11 +144,13 @@ endif
 precompile-headers:
 	$(SILENT) ( \
 	  $(ECHO) "Precompiling public headers... (non-apple extension)" ; \
+	  $(CHMOD) u+w $(DSTROOT)$(PUBLIC_HDR_INSTALLDIR)$(PUBLIC_HEADER_DIR_SUFFIX) ; \
 	  for pph in $(PUBLIC_PRECOMPILED_HEADERS) ; \
 	  do \
 	    h_path=$(DSTROOT)$(PUBLIC_HDR_INSTALLDIR)$(PUBLIC_HEADER_DIR_SUFFIX)/$$pph ; \
 	    p_path=$(DSTROOT)$(PUBLIC_HDR_INSTALLDIR)$(PUBLIC_HEADER_DIR_SUFFIX)/`basename $$pph .h`.p ; \
-	    $(ECHO) "$(CC) -precomp $(PUBLIC_PRECOMPILED_HEADERS_CFLAGS) $(DEBUG_BUILD_CFLAGS) -o $$p_path $$h_path" ; \
-	    $(CC) -precomp $(PUBLIC_PRECOMPILED_HEADERS_CFLAGS) $(DEBUG_BUILD_CFLAGS) -o $$p_path $$h_path ; \
+	    $(ECHO) "$(CC) -precomp $(PUBLIC_PRECOMPILED_HEADERS_CFLAGS) -o $$p_path $$h_path" ; \
+	    $(CC) -precomp $(PUBLIC_PRECOMPILED_HEADERS_CFLAGS) -o $$p_path $$h_path ; \
 	  done ; \
+	  $(CHMOD) $(INSTALL_PERMISSIONS) $(DSTROOT)$(PUBLIC_HDR_INSTALLDIR)$(PUBLIC_HEADER_DIR_SUFFIX) ; \
 	  )
