--- a/PB.project
+++ b/PB.project
@@ -27,6 +27,7 @@
     NEXTSTEP_LINKEROPTIONS = "-seg1addr 0x50000000"; 
     NEXTSTEP_OBJCPLUS_COMPILER = /usr/bin/cc; 
     PDO_UNIX_BUILDTOOL = $NEXT_ROOT/Developer/bin/make; 
+    PDO_UNIX_COMPILEROPTIONS = "-D__EXTENSIONS__"; 
     PDO_UNIX_INSTALLDIR = "$(LOCAL_LIBRARY_DIR)/Frameworks"; 
     PDO_UNIX_JAVA_COMPILER = "$(JDKBINDIR)/javac"; 
     PDO_UNIX_OBJCPLUS_COMPILER = "$(NEXTDEV_BIN)/gcc"; 
