Removed obsoleted CollectionMapping.m from GNUmakefile.

--- a/FoundationExtensions.subproj/GNUmakefile
+++ b/FoundationExtensions.subproj/GNUmakefile
@@ -1,5 +1,5 @@
 # FoundationExtensions.subproj
-# $Id: GNUmakefile,v 1.1 2002-04-14 14:57:56 znek Exp $
+# $Id: GNUmakefile,v 1.2 2002-07-09 16:22:16 znek Exp $
 
 
 ifeq "$(GNUSTEP_SYSTEM_ROOT)" ""
@@ -15,12 +15,12 @@ ADDITIONAL_INCLUDE_DIRS = -I..
 
 
 FoundationExtensions.subproj_OBJC_FILES = \
-CollectionMapping.m             NSInvocation+Extensions.m \
 NSArray+Extensions.m            NSObject+Extensions.m \
 NSAttributedString+Extensions.m NSProcessInfo+Extensions.m \
 NSData+Extensions.m             NSScanner+Extensions.m \
 NSDate+Extensions.m             NSSet+Extensions.m \
-NSDictionary+Extensions.m       NSString+Extensions.m
+NSDictionary+Extensions.m       NSString+Extensions.m \
+NSInvocation+Extensions.m
 
 FoundationExtensions.subproj_HEADER_FILES = \
 CollectionMapping.h             NSInvocation+Extensions.h \
