Subtle change, big difference: Removed all occurences of NeXT_RUNTIME and instead used GNU_RUNTIME where appropriate. Why did I do this? Because of precompiled headers! Everyone using precompiled headers had to define NeXT_RUNTIME in his projects to access the NeXT_RUNTIME definitions correctly. Because the headers were never precompiled with this flag, they were turned down during compiling. Re-precompiling them with the correct settings however required every client project - even those that didn't care - to define NeXT_RUNTIME; if they didn't they couldn't use the precompiled headers as well ... grmpf.
I figured, that the GNUstep platform doesn't have precompiled headers and doesn't suffer from any of the above mentioned problems. So I defined GNU_RUNTIME in all GNUmakefiles - and it turns out to be even better, because it's easy to figure in the GNUstep make environment, if you REALLY are using the GNU runtime.

Classical win-win here. :-)

--- a/AppKitExtensions.subproj/GNUmakefile
+++ b/AppKitExtensions.subproj/GNUmakefile
@@ -1,5 +1,5 @@
 # AppKitExtensions.subproj
-# $Id: GNUmakefile,v 1.1 2002-04-14 14:57:54 znek Exp $
+# $Id: GNUmakefile,v 1.2 2002-07-18 23:49:45 znek Exp $
 
 
 ifeq "$(GNUSTEP_SYSTEM_ROOT)" ""
@@ -12,6 +12,10 @@ include $(GNUSTEP_MAKEFILES)/common.make
 SUBPROJECT_NAME = AppKitExtensions.subproj
 
 ADDITIONAL_INCLUDE_DIRS = -I.. -I../FoundationExtensions.subproj
+
+ifeq "$(OBJC_RUNTIME_LIB)" "gnu"
+ADDITIONAL_OBJCFLAGS += -DGNU_RUNTIME
+endif
 
 
 AppKitExtensions.subproj_HEADER_FILES = \
