--- a/DataStructures.subproj/GNUmakefile
+++ b/DataStructures.subproj/GNUmakefile
@@ -1,5 +1,5 @@
 # DataStructures.subproj
-# $Id: GNUmakefile,v 1.2 2002-07-09 16:08:41 erik Exp $
+# $Id: GNUmakefile,v 1.3 2002-07-18 23:49:45 znek Exp $
 
 
 ifeq "$(GNUSTEP_SYSTEM_ROOT)" ""
@@ -12,6 +12,10 @@ include $(GNUSTEP_MAKEFILES)/common.make
 SUBPROJECT_NAME = DataStructures.subproj
 
 ADDITIONAL_INCLUDE_DIRS = -I.. -I../FoundationExtensions.subproj
+
+ifeq "$(OBJC_RUNTIME_LIB)" "gnu"
+ADDITIONAL_OBJCFLAGS += -DGNU_RUNTIME
+endif
 
 
 DataStructures.subproj_OBJC_FILES = \
